[package]
name = "miao-rust"
version = "0.18.5"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
tower = { version = "0.5", features = ["util"] }
tower-http = "0.5"
nix = { version = "0.29", features = ["signal", "user"] }
urlencoding = "2.1.3"
futures = "0.3"
regex = "1"
url = "2.5"
sha2 = "0.10"
hex = "0.4"
semver = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1.7"
bytes = "1.0"
